--- a/css/freelancer.css
+++ b/css/freelancer.css
@@ -514,3 +514,4 @@ fieldset[disabled] .btn-success.active {
 div#maincontent {
   outline: none;
 }
+.buttonlink {float:left; margin-right:50px; clear:both; }
